# 34-transcription-app

./: README.md  pyproject.toml
app/: db.py  diarize.py  eval.py  export.py  keychain.py  main.py  merge.py  pipeline.py  transcribe.py  vad.py
app/services/: anthropic_svc.py  exceptions.py  factory.py  gemini.py  lmstudio.py  ollama.py  openai_svc.py
app/static/: app.js  index.html  style.css
tests/: conftest.py  test_api.py  test_cloud_providers.py  test_db.py  test_diarize.py  test_eval.py  test_exceptions.py  test_export.py  test_factory.py  test_jobs.py  test_lmstudio.py  test_merge.py  test_ollama.py  test_pipeline.py  test_transcribe.py
