[project]
name = "34-transcription-app"
version = "0.1.0"
description = "Local audio transcription + speaker diarization web app"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "mlx-whisper>=0.4.0",
    "pyannote.audio>=4.0,<5",
    "torchaudio>=2.8.0",
    "fastapi",
    "uvicorn[standard]",
    "sse-starlette",
    "ffmpeg-python",
    "onnxruntime",
    "huggingface-hub",
    "python-multipart>=0.0.28",
    "aiosqlite>=0.22.1",
]
