[project]
name = "34-transcription-app"
version = "0.1.0"
description = "Local audio transcription + speaker diarization web app"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "mlx-whisper>=0.4.0",
    "pyannote.audio>=4.0,<5",
    "torchaudio>=2.8.0",
    "fastapi",
    "uvicorn[standard]",
    "sse-starlette",
    "ffmpeg-python",
    "onnxruntime",
    "huggingface-hub",
    "python-multipart>=0.0.28",
    "aiosqlite>=0.22.1",
    "httpx>=0.27.0",
    "keyring>=24.0",
]

[project.optional-dependencies]
gemini    = ["google-genai>=1.0"]
anthropic = ["anthropic>=0.40"]
openai    = ["openai>=1.0"]
cloud     = ["google-genai>=1.0", "anthropic>=0.40", "openai>=1.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "anthropic>=0.40",
    "openai>=1.0",
    "google-genai>=1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
